--- a/client/src/components/tasks/Assigned.css
+++ b/client/src/components/tasks/Assigned.css
@@ -95,6 +95,7 @@
     border: none;
     background: none;
     font-size: 14px;
+    border-bottom: 2px solid rgb(157, 157, 157);
 }
 .form-check-edit:focus{
     outline: none !important;
