--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,11 @@ textarea.edit{
   border-radius: 6px;
   padding: 8px;
 }
+input.edit{
+  background: #f0f1f5 !important;
+  border-radius: 6px;
+  padding: 8px;
+}
 textarea {
   height: 100px !important;
 }
