--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,9 +68,30 @@ input.edit{
 textarea {
   height: 100px !important;
 }
-.btn-icon{
+.btn-icon, .btn-icon-comment{
   color: #808080 !important;
 }
 .btn-icon:hover{
   background: #f0f1f5 !important;
+}
+.btn-icon-comment:hover{
+  background: #dcdde1 !important;
+}
+.username{
+  font-size: 14px;
+  cursor: pointer;
+  font-style: italic;  
+}
+.comment-date{
+  font-size: 12px;
+}
+.comment-box:hover{
+  background: #f0f1f5;
+  border-radius:6px;
+}
+.profile-image-sm{
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  margin-top:5px;
 }
