--- a/client/src/components/tasks/Detail.css
+++ b/client/src/components/tasks/Detail.css
@@ -54,3 +54,9 @@
     border-radius: 6px;
     background: #f0f1f5;
 }
+.total-comment{
+    font-weight: 500;
+    color:grey;
+    font-size: 13px;
+    font-style: italic;
+}
