Isotope filter, show deadline task notif
assigne and deadline filter. and finished task fixes

--- a/client/src/components/tasks/Assigned.css
+++ b/client/src/components/tasks/Assigned.css
@@ -39,7 +39,9 @@
 .text-optional{
     color:#9854cb;
 }
-
+.text-deadline{
+    color:#e74645;
+}
 /*Button*/
 .btn-more-content{
     border: none;
