Add task to archive

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,8 +11,21 @@
 .text-warning{
   color: #f68a24 !important;
 }
+.btn-primary{
+  background: #2a6fdb !important;
+}
 .btn-success{
   background: #309975 !important;
+}
+.btn-success-outlined{
+  border: 2.35px solid #2a6fdb;
+  background: white;
+  color:#2a6fdb;
+  font-weight: 500;
+}
+.btn-success-outlined:hover{
+  background: #2a6fdb;
+  color:whitesmoke;
 }
 .btn-delete{
   color: #e74645; 
@@ -101,4 +114,10 @@ textarea {
   width: 40px;
   height: 40px;
   margin-top:5px;
+}
+.text-empty{
+  font-style: italic;
+  color: #808080;
+  font-size: 14px;
+  text-align: center;
 }
